--- a/style.css
+++ b/style.css
@@ -8,32 +8,26 @@
 
 body {
     font-family: "Poppins", sans-serif;
-    background-color: #273c75;
+    /* background-color: #3742fa; */
 }
 
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 10px;
     width: 100%;
+    height: min-content;
+    background: aliceblue;
 }
 
 .container {
-    background: #7f8c8d;
-    /* background: #ffffff; */
+    background: aliceblue;
     padding: 33px 5% 33px 5%;
-    width: 80%;
-    /* margin-top: 21px; */
-    margin-bottom: 21px;
+    width: 70%;
     border-radius: 10px;
 
 
 }
-
-
-
-
 
 /* ------------------- */
 
@@ -44,19 +38,15 @@ main {
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
     justify-items: center;
-    column-gap: 4%;
-    row-gap: 1%;
-    border: 2px solid red;
-
+    column-gap: 2%;
+    row-gap: 40px;
 }
-
 
 .player {
     width: 80%;
     padding: 4% 4% 4% 4%;
-    background-color: aliceblue;
-
-
+    background-color: #ffffff;
+    box-shadow: 9px 8px 14px 1px rgba(0, 0, 0, 0.6);
 
 }
 
@@ -142,8 +132,6 @@ footer {
 hr {
     width: 80%;
     border: 1px solid rgba(255, 255, 255, 0.1);
-
-
 }
 
 .terms {
@@ -178,6 +166,7 @@ hr {
 /* Mobile */
 @media only screen and (max-width:570px) {
 
+
     /* players seaction */
 
     .container {
@@ -195,7 +184,7 @@ hr {
         font-size: 25px;
     }
 
-    /* final-section */
+    /* last players-section */
 
     .container {
         width: 80%;
@@ -226,10 +215,8 @@ hr {
 
     .button {
         width: 100%;
-        font-size: 10px;
+        font-size: 5px;
     }
-
-
 
 
 }
@@ -302,6 +289,5 @@ hr {
     p {
         text-align: center;
     }
-
 
 }
